solve overflow

--- a/src/app/pages/ptable/ptable.component.css
+++ b/src/app/pages/ptable/ptable.component.css
@@ -1,9 +1,20 @@
-/* 下面两个设置是取消溢出隐藏，以便在有列宽调整功能的同时显示下拉组件 */
-.ui-table-resizable>.ui-table-wrapper {
-    overflow: visible !important;
-}
+/* 下面两个设置是取消溢出隐藏，以便在有列宽调整功能的同时显示下拉组件 
+ ::ng-deep .ui-table-resizable>.ui-table-wrapper {
+    overflow: visible;
+  }
+  
+  
+ ::ng-deep .ui-table-resizable .ui-table-thead>tr>th, 
+  .ui-table-resizable .ui-table-tfoot>tr>td,
+  .ui-table-resizable .ui-table-tbody>tr>td {
+    overflow: visible;
+  }
+  */
 
-.ui-table-resizable .ui-table-thead>tr>th, .ui-table-resizable .ui-table-tfoot>tr>td,
-.ui-table-resizable .ui-table-tbody > tr > td {
+  ::ng-deep .ur-table-resizable > .ui-table-wrapper, td{
+      overflow: visible !important;
+  }
+
+  ::ng-deep .ui-table-resizable>.ui-table-wrapper {
     overflow: visible !important;
-}
+  }
